add flaxman graph

--- a/influence_models.html
+++ b/influence_models.html
@@ -128,8 +128,8 @@
             id="toc-impact-médiatique-et-scientifique">Impact médiatique
             et scientifique</a></li>
             </ul></li>
-            <li><a href="#flexman-2020-nature"
-            id="toc-flexman-2020-nature">Flexman 2020, Nature</a></li>
+            <li><a href="#flaxman-2020-nature"
+            id="toc-flaxman-2020-nature">Flaxman 2020, Nature</a></li>
             <li><a href="#walker-2020-science"
             id="toc-walker-2020-science">Walker 2020, Science</a></li>
             </ul>
@@ -331,11 +331,12 @@ target="_blank">Aucune étude n’a appuyé le confinement ? Faux</a></li>
 </ul>
 </div>
 </div>
-<div id="flexman-2020-nature" class="section level1">
-<h1>Flexman 2020, Nature</h1>
+<div id="flaxman-2020-nature" class="section level1">
+<h1>Flaxman 2020, Nature</h1>
 <p>A venir, mais un court résumé peut êre vu <a
 href="https://twitter.com/Covid_Scenarios/status/1579169204888305665"
 target="_blank">ici</a>.</p>
+<p><img src="influence_models_files/figure-html/unnamed-chunk-4-1.svg" width="499.2" style="display: block; margin: auto;" /></p>
 </div>
 <div id="walker-2020-science" class="section level1">
 <h1>Walker 2020, Science</h1>
